Closed Bug 1644266 Opened 6 years ago Closed 6 years ago

Crash in [@ mozilla::ContentBlocking::OnAllowAccessFor]

Categories

(Core :: Privacy: Anti-Tracking, defect, P1)

77 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox77 --- disabled
firefox78 --- fixed
firefox79 --- fixed

People

(Reporter: philipp, Assigned: dimi)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-5e8bc895-b8da-4ccc-acaf-9f96c0200608.

Top 10 frames of crashing thread:

0 xul.dll static mozilla::ContentBlocking::OnAllowAccessFor toolkit/components/antitracking/ContentBlocking.cpp:563
1 xul.dll mozilla::ContentBlocking::CompleteAllowAccessFor::<unnamed-tag>::operator const toolkit/components/antitracking/ContentBlocking.cpp:467
2 xul.dll mozilla::MozPromise<int, bool, 1>::ThenValue<`lambda at /builds/worker/checkouts/gecko/toolkit/components/antitracking/ContentBlocking.cpp:532:9'>::DoResolveOrRejectInternal xpcom/threads/MozPromise.h:839
3 xul.dll mozilla::MozPromise<bool, mozilla::ipc::ResponseRejectReason, 1>::ThenValueBase::ResolveOrRejectRunnable::Run xpcom/threads/MozPromise.h:410
4 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1211
5 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:87
6 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
7 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
8 xul.dll nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137
9 xul.dll nsAppShell::Run widget/windows/nsAppShell.cpp:430

these content crashes have started cross-platform in 77 nightly and now seem to hit the beta audience in 78.0b too.

Assignee: nobody → dlee
Status: NEW → ASSIGNED
Priority: -- → P1
Pushed by dlee@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5aedde81baa3 Check whether inner window has extant document before using r=timhuang
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

Please request beta uplift when you get a chance.

Flags: needinfo?(dlee)

Comment on attachment 9155228 [details]
Bug 1644266 - Check whether inner window has extant document before using r=timhuang

Beta/Release Uplift Approval Request

  • User impact if declined: Crash when visiting sites with trackers
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Only add a null pointer check
  • String changes made/needed:
Flags: needinfo?(dlee)
Attachment #9155228 - Flags: approval-mozilla-beta?

Comment on attachment 9155228 [details]
Bug 1644266 - Check whether inner window has extant document before using r=timhuang

approved for 78.0b7

Attachment #9155228 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Still seeing crashes with that signature in 78.0b7, e.g. bp-a2d3a8d9-44a7-4c89-a1ec-f3a850200617. Should we reopen, or track that in a new bug?

Flags: needinfo?(dlee)

This should be fixed by the patch in Bug 1642919, I'll request uplift in the bug.

Flags: needinfo?(dlee)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: