Bug 1644266 - Check whether inner window has extant document before using. r=timhuang, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D78872